#145: Ensure Full-Width Boxes on Mobile

--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -22,6 +22,12 @@
   font-size: 17px;
 }
 
+@media (max-width: 400px){
+  .explore-menu .explore-menu-text {
+    max-width: 100%;
+  }
+}
+
 .explore-menu-list {
   display: flex;
   justify-content: space-between;
