--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -67,6 +67,12 @@ a {
   margin: 0 auto;
   padding: 20px;
 }
+@media (max-width:450px) {
+  .app{
+  width:auto;
+  padding: 20px 10px;
+  }
+}
 
 @keyframes fadeIn {
   0% {
